<resources>
    <!-- Pedometer -->
    <string name="app_name">AppManager</string>
    <string name="main_title">Gestion du podomètre</string>
    <string name="launch">Lancer</string>
    <string name="launch_toast">Détection lancée !</string>
    <string name="stop">Arrêter</string>
    <string name="stop_toast">Détection arrêtée !</string>
    <string name="foot_steps_label">Nombre de pas effectués : </string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="pedometer_section_label">Podomètre</string>

    <!-- Account -->
    <string name="account_section_label">Dépenses / Crédits</string>
    <string name="history">Historique</string>
    <string name="statement">Bilan</string>
    <string name="piechart">Diagramme circulaire</string>
    <string name="expenses">Dépenses</string>
    <string name="credits">Crédits</string>
    <!-- Account History -->
    <string name="account_history_section_label">Historique</string>
    <string name="add_transaction">Nouvelle transaction</string>
    <string name="modify_transaction">Modifier la transaction</string>
    <string name="price">Prix</string>
    <string name="comment">Commentaire</string>
    <string-array name="expense_types">
        <item>Alimentation générale</item>
        <item>Soirées</item>
        <item>Restaurants</item>
        <item>Loyer</item>
        <item>Charges</item>
        <item>Internet, TV, Téléphone</item>
        <item>Transports</item>
        <item>Loisirs</item>
        <item>Autres</item>
    </string-array>
    <string-array name="credit_types">
        <item>Salaire</item>
        <item>Aide au logement</item>
        <item>Famille</item>
        <item>Autres</item>
    </string-array>
    <string name="delete_expense">Supprimer cette dépense ?</string>
    <string name="delete_credit">Supprimer ce crédit ?</string>
    <string name="delete_transaction">Supprimer la transaction ?</string>
    <string name="add_price">Ajoutez un prix</string>
    <string name="price_not_valid">Le prix n\'est pas valide</string>
    <string name="append_transactions">Afficher plus de transactions</string>
    <string name="types">Catégories</string>
    <string name="select_all">Tous</string>
    <string name="select_nothing">Rien</string>
    <string name="regex">RegEx</string>
    <!-- Account statement -->
    <string name="account_statement_section_label">Bilan</string>
    <string name="statement_label">Bilan sur</string>
    <string name="statement_value_label">Bilan total :</string>
    <string-array name="dayMonthYear">
        <item>Jours</item>
        <item>Mois</item>
        <item>Années</item>
    </string-array>
    <string name="cumulative_credits">Crédits cumulés</string>
    <string name="cumulative_expenses">Dépenses cumulées</string>
    <string name="mean_credit_label">Crédit moyen</string>
    <string name="mean_expense_label">Dépense moyenne</string>
    <string name="last_statement_label">Dernier bilan :</string>
    <string name="is_cumulative_label">Bilan cumulé</string>
    <!-- Account pie chart -->
    <string name="account_piechart_section_label">Répartition</string>
    <string name="from">Du</string>
    <string name="to">Au</string>
    <string name="pie_chart_dataset_label">(en €)</string>

    <!-- Recipes -->
    <string name="recipes_section_label">Recettes cuisine</string>
    <string name="add_recipe">Ajouter</string>
    <string name="recipe_name">Nom recette</string>
    <string name="recipe_type">Type</string>
    <string-array name="recipe_types">
        <item>Entrée</item>
        <item>Plat</item>
        <item>Dessert</item>
        <item>Autre</item>
    </string-array>
    <string-array name="units_array">
        <item></item>
        <item>g</item>
        <item>Kg</item>
        <item>L</item>
        <item>cL</item>
        <item>Cuillère à café</item>
    </string-array>
    <string name="recipe_difficulty">Difficulté</string>
    <string name="recipe_grade">Note</string>
    <string name="recipe_time">Temps (minutes)</string>
    <string name="recipe_people">Personnes</string>
    <string name="add_ingredient">Ajouter un ingrédient</string>
    <string name="add_step">Ajouter une étape</string>
    <string name="quantity">Quantité</string>
    <string name="unit">Unité</string>
    <string name="ingredient">Ingrédient</string>
    <string name="ingredients">Ingrédients</string>
    <string name="step_description">Description de l\'étape</string>
    <string name="steps">Etapes</string>
    <string name="add_image">Ajouter une image</string>
    <string name="recipe_name_error">Ajouter un nom de recette</string>
    <string name="recipe_time_error">Temps de préparation incorrect</string>
    <string name="recipe_people_error">Nombre de personnes incorrect</string>
    <string name="ingredient_name_error">Ajouter le nom de l\'ingrédient</string>
    <string name="ingredient_quantity_error">Quantité incorrecte</string>
    <string name="step_description_error">Ajouter une description de l\'étape</string>
    <string name="for_recipes_list">Pour les recettes :</string>
    <string name="add_separation">Ajouter une section</string>
    <string name="separation_name">Nom de la section</string>
    <string name="separation_error">Ajouter un nom à la section</string>
    <string name="optional_label">Facultatif</string>
    <string name="optional_label_parenthesis">(facultatif)</string>
    <string name="among_x_optional">(dont %s facultatif)</string>
    <string name="url">URL</string>
    <string name="import_web_recipe">Importer depuis Internet</string>
    <string name="error_parsing_web_recipe">Recette internet non valide</string>
    <string name="shopping_label">Courses</string>
    <string name="ingredients_management">Gestion des ingrédients</string>
    <string name="add_conversion">Ajouter une conversion</string>
    <string name="conversion_factor_error">Facteur de conversion incorrect</string>
    <string name="conversion_unit_error">Veuillez spécifier les unités de conversion.</string>
    <string name="conversion_already_exists_error">Une conversion du même genre existe déjà.</string>

    <!-- Check lists -->
    <string name="check_lists_section_label">Check lists</string>
    <string name="restore_group_confirmation">Tous les éléments vont être décochés, voulez vous continuer ?</string>

    <!-- Settings -->
    <string name="step_counter_on_start">Lancer le podomère au démarrage</string>
    <string name="save_data">Sauvegarder sur stockage externe</string>
    <string name="load_data">Télécharger depuis stockage externe</string>
    <string name="write_error">Erreur lors de la sauvegarde</string>
    <string name="read_error">Erreur lors du téléchargement</string>
    <string name="save_data_success">Données sauvegardées</string>
    <string name="load_data_success">Données téléchargées</string>
    <string name="confirm_save_data">Confirmer la sauvergarde sur stockage externe ?</string>
    <string name="confirm_load_data">Confirmer le téléchargement depuis stockage externe ?</string>

    <!-- Main -->
    <string name="settings">Paramètres</string>
    <string name="cancel">Annuler</string>
    <string name="add">Ajouter</string>
    <string name="modify">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="duplicate">Dupliquer</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="ok">Ok</string>
    <string name="reset">Reset</string>
    <string name="apply">Appliquer</string>
    <string name="search">Rechercher</string>
    <string name="save">Sauvegarder</string>
    <string name="title">Titre</string>
    <string name="data_saved_success">Données sauvegardées sur stockage externe</string>
    <string name="data_saved_error">Erreur lors de la sauvegarde des données sur stockage externe</string>
    <string name="data_loaded_success">Données chargées depuis stockage externe</string>
    <string name="data_loaded_error">Erreur lors du chargement des données depuis stockage externe</string>
    <string name="delete_confirmation">Confirmer la suppression ?</string>
    <string name="changes_might_be_loosed_confirm">Changements non enregistrés, voulez vous continuer ?</string>

</resources>
