<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/quantity"/>

    <LinearLayout
        android:id="@+id/unit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/quantity">

        <TextView
            android:id="@+id/unit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"/>

        <Spinner
            android:id="@+id/unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/ingredient_auto_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient"
        android:layout_below="@id/unit_layout"
        android:maxLength="32"/>

    <CheckBox
        android:id="@+id/optional_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingredient_auto_complete"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/optional_label" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingredient_auto_complete"
        android:textSize="16sp"
        android:visibility="gone"
        android:textColor="@color/red"/>

</RelativeLayout>