<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/root_layout">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">

        <ImageButton
            android:id="@+id/back_button"
            style="@style/BackButton"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_name"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_label"/>

            <LinearLayout
                android:id="@+id/type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/name">

                <TextView
                    android:id="@+id/type_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_type"/>

                <Spinner
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </Spinner>

            </LinearLayout>

            <TextView
                android:id="@+id/difficulty_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_difficulty"
                android:layout_below="@id/type_layout"/>

            <TextView
                android:id="@+id/difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:layout_below="@id/type_layout"
                android:layout_toEndOf="@id/difficulty_label"
                android:layout_toRightOf="@id/difficulty_label" />

            <SeekBar
                android:id="@+id/difficulty_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/type_layout"
                android:progress="0"
                android:max="4"
                android:layout_toEndOf="@id/difficulty"
                android:layout_toRightOf="@id/difficulty">

            </SeekBar>

            <TextView
                android:id="@+id/grade_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_grade"
                android:layout_below="@id/difficulty_label"/>

            <TextView
                android:id="@+id/grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:layout_below="@id/difficulty_label"
                android:layout_toEndOf="@id/grade_label"
                android:layout_toRightOf="@id/grade_label" />

            <SeekBar
                android:id="@+id/grade_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/difficulty_label"
                android:progress="0"
                android:max="4"
                android:layout_toEndOf="@id/grade"
                android:layout_toRightOf="@id/grade">

            </SeekBar>

            <LinearLayout
                android:id="@+id/time_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/grade_label"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_time"/>

                <EditText
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ingredients_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/time_section"
                android:orientation="vertical">

            </LinearLayout>

            <Button
                android:id="@+id/add_ingredient_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ingredients_list"
                android:text="@string/add_ingredient"/>

            <LinearLayout
                android:id="@+id/steps_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_ingredient_button"
                android:orientation="vertical">

            </LinearLayout>

            <Button
                android:id="@+id/add_step_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/steps_list"
                android:text="@string/add_step"/>

            <Button
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_step_button"
                android:text="@string/add"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>