<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:focusable="true" android:focusableInTouchMode="true">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/expense_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/expenses"/>

        <RadioButton
            android:id="@+id/credit_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/credits"/>

    </RadioGroup>

    <Spinner
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:background="@android:color/transparent"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp">

    </Spinner>

    <LinearLayout
        android:id="@+id/price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/type"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp">

        <TextView
            android:id="@+id/price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>


    </LinearLayout>

    <DatePicker
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_below="@id/price_layout"
        android:layout_centerHorizontal="true">

    </DatePicker>

    <TextView
        android:id="@+id/comment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:layout_below="@id/date"
        android:textSize="16sp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="50"
        android:layout_below="@id/comment_label" />

</RelativeLayout>