<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:focusable="true" android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">

        <ImageButton
            android:id="@+id/back_button"
            style="@style/BackButton"/>

        <EditText
            android:id="@+id/search_field"
            android:hint="@string/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:selectAllOnFocus="true"/>

        <ImageButton
            android:id="@+id/drop_down_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/blue_flat_button"
            android:src="@drawable/three_dots"
            android:scaleType="fitXY"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/recipes_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/recipes_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/add_recipe_button"
        style="@style/AddButton"/>

    <ImageButton
        android:id="@+id/validate_shopping_button"
        style="@style/AddButton"
        android:src="@drawable/validate"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/drop_down_menu"
        android:layout_width="300dp"
        android:layout_height="0px"
        android:layout_below="@id/toolbar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimaryDark"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true">

        <LinearLayout
            android:id="@+id/shopping_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/shopping"
                android:layout_margin="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/shopping_label"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_margin="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ingredients_management_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shopping_button"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ingredients"
                android:layout_margin="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/ingredients_management"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_margin="3dp"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>